--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 spring.datasource.username=springbootuser
 spring.datasource.password=Spring273
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
