--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Spring273
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Eureka Server URL: 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
