--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 
 #Eureka Server URL: 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+jwt.secret.key=Rajesh MRK
